--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "algoliasearch": "^4.19.1",
     "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.1.0",
+    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "next": "13.4.12",
     "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "@types/lodash": "^4.14.196"
   }
 }
