--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.1",
-    "@mui/material": "^5.14.2",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "algoliasearch": "^4.19.1",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "firebase": "^10.1.0",
+    "autoprefixer": "^10.4.15",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
+    "firebase": "^10.2.0",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
-    "next": "13.4.12",
-    "postcss": "^8.4.27",
+    "next": "13.4.19",
+    "postcss": "^8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -34,7 +34,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/leaflet": "^1.9.3",
-    "@types/lodash": "^4.14.196"
+    "@types/lodash": "^4.14.197"
   }
 }
