--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
