--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "algoliasearch": "^4.19.1",
     "autoprefixer": "^10.4.15",
     "eslint": "8.47.0",
@@ -31,8 +32,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6",
-    "usehooks-ts": "^2.9.1"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
